--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,17 @@
 [project]
 name = "python-com-flask"
 version = "0.1.0"
-description = "Add your description here"
-readme = "README.md"
-requires-python = ">=3.12"
-dependencies = [
-  "flask"
+description = "Default template for PDM package"
+authors = [
+    {name = "Tamicktom", email = "rickpokemon38@gmail.com"},
 ]
+dependencies = ["flask>=3.1.2"]
+requires-python = "==3.12.*"
+readme = "README.md"
+license = {text = "MIT"}
+
+[tool.pdm.scripts]
+dev = "python src/main.py"
+
+[tool.pdm]
+distribution = false
