--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Default template for PDM package"
 authors = [
     {name = "Tamicktom", email = "rickpokemon38@gmail.com"},
 ]
-dependencies = ["flask>=3.1.2", "Flask-SQLAlchemy>=3.1.1", "Flask-Cors>=6.0.2", "Werkzeug>=3.1.5", "pydantic>=2.12.5"]
+dependencies = ["flask>=3.1.2", "Flask-SQLAlchemy>=3.1.1", "Flask-Cors>=6.0.2", "Werkzeug>=3.1.5", "pydantic>=2.12.5", "pytest>=9.0.2"]
 requires-python = "==3.12.*"
 readme = "README.md"
 license = {text = "MIT"}
